--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic = "^2.10.6"
 google-cloud-secret-manager = "^2.23.1"
 boto3 = ">=1.37.11,<2.0.0"
 requests-aws4auth = ">=1.3.1,<2.0.0"
+google-auth = "^2.38.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
