--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ google-cloud-secret-manager = "^2.23.1"
 boto3 = ">=1.37.11,<2.0.0"
 requests-aws4auth = ">=1.3.1,<2.0.0"
 google-auth = "^2.38.0"
+pyyaml = "^6.0.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
