--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ boto3 = ">=1.37.11,<2.0.0"
 requests-aws4auth = ">=1.3.1,<2.0.0"
 google-auth = "^2.38.0"
 pyyaml = "^6.0.2"
+slack-sdk = "^3.35.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
