--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ requests-aws4auth = ">=1.3.1,<2.0.0"
 google-auth = "^2.38.0"
 pyyaml = "^6.0.2"
 slack-sdk = "^3.35.0"
+unidiff = "^0.7.5"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
